# ThePineappleW.github.io

./: .gitignore  About.html  CNAME  about.md  index.html  jacobowitz-org.cabal  site.hs  sitemap.txt  stack.yaml
2012/01/: a-2012-blog-post.html
2023/05/: scribble-test-post.html  test-post.html
2023/06/: hello-world.html
2024/01/: first-impressions-from-sabhal-mòr-ostaig.html
2024/06/: 3-nlp-assumptions-that-don-t-hold-up.html
_site/: about.html  blog.html  index.html
_site/css/: default.css
_site/posts/: 2015-08-12-spqr.html  2024-01-25-smo.html
css/: custom.css  default.css
docs/: CNAME  about.html  blog.html  index.html
docs/css/: default.css
docs/js/: interlinear.js
docs/posts/: 2024-01-25-smo.html  2025-06-05-sum_3.html  2025-06-07-sum_4.html  2025-11-30-minecraft-server.html  2025-12-01-advent-of-code-2025.html
feeds/: Announcement.atom.xml  Announcement.rss.xml  Gaelic.atom.xml  Gaelic.rss.xml  Linguistics.atom.xml  Linguistics.rss.xml  NLP.atom.xml  NLP.rss.xml  all.atom.xml  all.rss.xml  bar.atom.xml  bar.rss.xml  baz.atom.xml  baz.rss.xml  foo.atom.xml  foo.rss.xml  tag-with-spaces.atom.xml  tag-with-spaces.rss.xml  test.atom.xml  test.rss.xml
js/: interlinear.js
posts/: 2024-01-25-smo.md  2025-06-05-sum_3.md  2025-06-07-sum_4.md  2025-11-30-minecraft-server.md  2025-12-01-advent-of-code-2025.md
tags/: Announcement.html  Gaelic.html  Linguistics.html  NLP.html  bar.html  baz.html  foo.html  tag-with-spaces.html  test.html
templates/: default.html
