name:               jacobowitz-org
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , pandoc == 3.6.*
                  , hakyll-favicon == 0.1.*
                  , hjsmin == 0.2.*
                  , bytestring == 0.12.*
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
